--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,207 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background: linear-gradient(to bottom, black 55%, rgb(97, 0, 92));
+    
+    font-family: 'Alkalami', serif;
+    font: 10px;
+    color: white;
+    min-height: 100vh;
+    
+}
+header{
+    display: flex;
+    border-bottom: 1px solid black;
+    background-color: rgb(124, 6, 235);
+    margin-block: auto;
+}
+.heading-left{
+    margin-right: auto;
+    margin-left: 10px;
+}
+.heading-right{
+    margin-right: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.random-button {
+    width: 160px;
+    height: 50px;
+    margin: auto;
+    margin-block: auto;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #ededed;
+}
+.random-button:active{
+    background: #e5e5e5;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
+    outline: none;
+}
+.search-input{
+    height:40px ;
+    margin-block: auto;
+    border: 1px solid #ededed;
+}
+.search-button{
+    width: 80px;
+    height: 40px;
+    margin-right: 10px;
+    margin-block: auto;
+    cursor: pointer;
+    background: #ededed;
+    border: 1px solid #ededed;
+}
+.search-button:active{
+    background: #e5e5e5;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
+    outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+main {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+}
+main>h1{
+    text-align: center;
+    text-decoration: underline;
+    font-size: 40px;
+    margin-bottom: 0;
+    color: orange;
+}
+.main-heading3{
+    text-align: center;
+    color: orange;
+    margin-right:30px;
+    margin-left: 30px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
+    }
+    .box-container{
+        display: grid;
+        grid-template: auto / 1fr 1fr 1fr 1fr;
+        gap: 40px;
+        padding: 20px;
+        margin-block: 40px;
+        margin: auto;       
+    }
+    .box{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 180px;
+        
+    }
+    .box:hover{
+        color: orange;
+        cursor: pointer;
+        
+    }
+    .box-image {
+        width: auto;
+        height: 150px;
+        border-radius: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .box-image-name{
+        margin-top: 0;
+        font-size: medium;
+    }
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.card-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+    background-color: orange;
+    color: black;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 85%;
+    max-width: 700px;
+    height:auto;
+    margin-bottom: 40px;
+   
+    
+
+}
+.drink-name{
+    margin-block: 20px;
+    text-decoration: underline;
+}
+.glass-heading{
+    text-decoration: underline;
+    margin-block: 0;
+}
+.glass-text{
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.instruction-heading{
+    text-decoration: underline;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.instruction-text {
+    margin-block: 0;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+.measures-heading{
+    text-decoration: underline;
+    margin-bottom: 5px;
+}
+.drink-image {
+    height: 250px;
+    width: 50%;
+    border-radius: 20px;
+    margin: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+    margin-top: 0;
+    list-style: none;
 }
+.close-button {
+    width: 160px;
+    height: 50px;
+    margin: auto;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #ededed;
+}
+.close-button:active{
+    background: #e5e5e5;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
+    outline: none;
+}
+
+footer{
+position: static;
+display: flex;
+background-color: rgb(124, 6, 235);
+width: 100%;
+height: 50px;
+bottom: 0;
+margin-top: auto;
+text-align: center;
+justify-content: center;
+}
+footer>small{
+    margin-block: auto;
+}
+
