--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 header{
     display: flex;
     border-bottom: 1px solid black;
-    background-color: rgb(124, 6, 235);
+    background-color: rgb(40, 0, 77);
     margin-block: auto;
 }
 .heading-left{
@@ -81,12 +81,15 @@ main>h1{
 
     }
     .box-container{
-        display: grid;
-        grid-template: auto / 1fr 1fr 1fr 1fr;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 40px;
         padding: 20px;
         margin-block: 40px;
-        margin: auto;       
+        margin: auto; 
+        border-top: 1px solid rgb(144, 139, 139);
+        width: 90%;     
     }
     .box{
         display: flex;
@@ -189,11 +192,16 @@ ul {
     box-shadow: inset 0px 0px 5px #c1c1c1;
     outline: none;
 }
+.nodata-text{
+    text-align: center;
+    font-size: 25px;
+    margin-top: 0;
+}
 
 footer{
 position: static;
 display: flex;
-background-color: rgb(124, 6, 235);
+background-color: rgb(40, 0, 77);
 width: 100%;
 height: 50px;
 bottom: 0;
